--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
 					Graph analysieren
 				</button>
 				<button class="btn btn-default btn-lg" id="btnSave">Graph speichern</button>
-				<label for="btnSave"><a id="saveAnchor">JSON Speichern</a></label>
+				<label for="btnSave"><a id="saveAnchor">JSON Speichern</a></label><br>
 				
+				<button class="btn btn-default btn-lg" id="btnTest">Test!</button>
 			</form>
 		</div>
 		
