Added minimizeDFA and some other functions

--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 				</div>
 				<button class="btn btn-info btn-lg" id="btnTestWord">Eingabe testen</button>
 				<button class="btn btn-info btn-lg" id="btnToDFA">In DFA umwandeln</button>
-				<button type="button" class="btn btn-info btn-lg" id="btnAnalyzeGraph">
+				<button class="btn btn-info btn-lg" id="btnMinimizeDFA">DFA minimieren</button>
+				<button type="button" class="btn btn-info btn-lg disabled" id="btnAnalyzeGraph">
 					Graph analysieren
 				</button>
 				<button class="btn btn-default btn-lg" id="btnSave">Graph speichern</button>
