Changes to internal Object structure

--- a/index.html
+++ b/index.html
@@ -142,11 +142,10 @@
 				<button type="button" class="btn btn-info btn-lg disabled" id="btnAnalyzeGraph">
 					Graph analysieren
 				</button>
-				<button class="btn btn-default btn-lg" id="btnSave">Graph speichern</button>
-				<label for="btnSave"><a id="saveAnchor">JSON Speichern</a></label><br>
 				
 				<button class="btn btn-default btn-lg" id="btnTest">Test!</button>
 			</form>
+			<button class="btn btn-default btn-lg" id="btnSave">Graph speichern <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span></button>
 		</div>
 		
 		<div class="node-settings" id="nodeSettings">
