--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				</div>
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" id="checkHasLoop"> Loop
+						<input type="checkbox" id="checkHasLoop"> Schleife
 					</label>
 				</div>
 			</form>
